tests/baselines/reference/enumMergingErrors.errors.txt
enumMergingErrors.ts(2,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(7,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(12,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(19,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(22,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(25,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(26,22): error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
enumMergingErrors.ts(31,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(34,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(37,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
enumMergingErrors.ts(38,22): error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.


==== enumMergingErrors.ts (11 errors) ====
    // Enum with constant, computed, constant members split across 3 declarations with the same root module
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { A = 0 }
        export enum E2 { C }
        export enum E3 { A = 0 }
    }
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { B = 'foo'.length }
        export enum E2 { B = 'foo'.length }
        export enum E3 { C }
    }
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { C }
        export enum E2 { A = 0 }
        export enum E3 { B = 'foo'.length }
    }
    
    // Enum with no initializer in either declaration with constant members with the same root module
    module M1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { A = 0 }
    }
    module M1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { B }
    }
    module M1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { C }
                         ~
!!! error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
    }
    
    
    // Enum with initializer in only one of three declarations with constant members with the same root module
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { A }
    }
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { B = 0 }
    }
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export enum E1 { C }
                         ~
!!! error TS2432: In an enum with multiple declarations, only one declaration can omit an initializer for its first enum element.
    }
    
    
    